--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -159,7 +159,7 @@ footer h3 a:hover {
 
 body {
     font-size: 22px;
-    font-family: Inter, Akshar, Bebas Neue;
+    font-family: 'Inter', 'Akshar', 'Bebas Neue';
 }
 
 
