--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -353,7 +353,110 @@ img.mountains {
 }
 
 
-/*Apartir de la linea 356 hacia abajo empieza el @media query*/
+/*Desde aquí empieza los estilos de la página RIVERS.*/
+
+#rivers2 {
+    background-color: lavenderblush;
+    margin: 20px;
+}
+
+#rivers3 {
+    font-size: 36px;
+    text-align: center;
+    font-style: normal;
+}
+
+#rivers4 {
+    text-align: center;
+    font-size: small;
+    display: flex;
+    align-items: center;
+}
+
+#rivers5 {
+    font-size: 15px;
+    font-style: italic;
+    color: white;
+}
+
+#salmon {
+    height: 150px;
+    width: 200px;
+    float: left;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-right: auto;
+}
+
+#rivers6 {
+    font-size: 15px;
+    font-style: italic;
+    color: white;
+}
+
+#canyon {
+    float: right;
+    height: 150px;
+    width: 200px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-left: 10px;
+}
+
+#rivers7 {
+    font-size: 15px;
+    font-style: italic;
+    color: white;
+}
+
+#arizona {
+    height: 150px;
+    width: 200px;
+    float: left;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+#rivers8 {
+    font-size: 19px;
+    margin: 30px;
+}
+
+#tres {
+    background-color: darkslategray;
+    margin-left: 10px;
+    margin-top: 70px;
+    padding: 40px;
+    box-shadow: 10px 10px 5px lightblue;
+    border-radius: 4px;
+}
+
+#dos {
+    background-color: darkslategray;
+    margin-right: 10px;
+    margin-top: 70px;
+    padding: 40px;
+    box-shadow: 10px 10px 5px lightblue;
+    border-radius: 4px;
+}
+
+#uno {
+    background-color: darkslategray;
+    margin-left: 10px;
+    margin-top: 70px;
+    padding: 30px;
+    box-shadow: 10px 10px 5px lightblue;
+    border-radius: 4px;
+}
+
+#rivers9 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 22px;
+}
+
+
+/*Apartir de aqui hacia bajo empieza el @media query(CONSULTA DE MEDIOS)*/
 
 @media screen and (max-width: 900px) {
     #hero,
