--- a/siteplan/styles/style.css
+++ b/siteplan/styles/style.css
@@ -237,7 +237,7 @@ footer a:hover {
 }
 
 .logo {
-    width: 5%;
+    width: 60%;
 }
 
 footer h3 a:hover {
@@ -245,7 +245,12 @@ footer h3 a:hover {
     text-decoration: underline;
 }
 
+footer h3 {
+    padding: 10px;
+}
+
 #hero-img {
+    height: 127%;
     width: 100%;
 }
 
@@ -311,6 +316,8 @@ nav a {
 
 footer .social img {
     padding-top: 15px;
+    padding: 10px;
+    margin-left: 40px;
 }
 
 body {
@@ -353,104 +360,51 @@ img.mountains {
 }
 
 
-/*Desde aquí empieza los estilos de la página RIVERS.*/
+/*Apartir de aqui hacia bajo empieza el @media query(CONSULTA DE MEDIOS)*/
 
-#rivers2 {
-    background-color: lavenderblush;
-    margin: 20px;
-}
-
-#rivers3 {
-    font-size: 36px;
-    text-align: center;
-    font-style: normal;
-}
-
-#rivers4 {
-    text-align: center;
-    font-size: small;
-    display: flex;
-    align-items: center;
-}
-
-#rivers5 {
-    font-size: 15px;
-    font-style: italic;
-    color: white;
-}
-
-#salmon {
-    height: 150px;
-    width: 200px;
-    float: left;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    margin-right: auto;
-}
-
-#rivers6 {
-    font-size: 15px;
-    font-style: italic;
-    color: white;
-}
-
-#canyon {
-    float: right;
-    height: 150px;
-    width: 200px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    margin-left: 10px;
-}
-
-#rivers7 {
-    font-size: 15px;
-    font-style: italic;
-    color: white;
-}
-
-#arizona {
-    height: 150px;
-    width: 200px;
-    float: left;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    margin-right: 10px;
-}
-
-#rivers8 {
-    font-size: 19px;
-    margin: 30px;
-}
-
-#tres {
-    background-color: darkslategray;
-    margin-left: 10px;
-    margin-top: 70px;
-    padding: 40px;
-    box-shadow: 10px 10px 5px lightblue;
-    border-radius: 4px;
-}
-
-#dos {
-    background-color: darkslategray;
-    margin-right: 10px;
-    margin-top: 70px;
-    padding: 40px;
-    box-shadow: 10px 10px 5px lightblue;
-    border-radius: 4px;
-}
-
-#uno {
-    background-color: darkslategray;
-    margin-left: 10px;
-    margin-top: 70px;
-    padding: 30px;
-    box-shadow: 10px 10px 5px lightblue;
-    border-radius: 4px;
-}
-
-#rivers9 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 22px;
+@media screen and (max-width: 900px) {
+    #hero,
+    .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav,
+    footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card,
+    .camping-card,
+    .rapids-card {
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains,
+    .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
