--- a/apusiqay/styles/site-plan.css
+++ b/apusiqay/styles/site-plan.css
@@ -2,16 +2,16 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Caveat&family=Lobster&family=Tajawal:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Shalimar&family=Splash&display=swap");
 :root {
     /* change the values below to your colors from your palette */
-    --primary-color: #396E94;
-    --secondary-color: #E7C24F;
-    --accent1-color: #A42212;
+    --primary-color: #CB6521;
+    --secondary-color: #FDFDFD;
+    --accent1-color: #000000;
     --accent2-color: white;
     /* change the values below to your chosen font(s) */
-    --heading-font: "Tajawal";
-    --paragraph-font: Lobster, Caveat, Baloo 2;
+    --heading-font: "Splash";
+    --paragraph-font: Verdana, Geneva, Tahoma, sans-serif;
     /* these colors below should be chosen from among your palette colors above */
     --headline-color-on-white: #396E94;
     /* headlines on a white background */
